# sl-1-4-object-based-camera-object-model

./: .clang-format  .clang-tidy  CMakeLists.txt  DISCLAIMER  LICENSE  README.md  VideoSensorModel_Metadata.srmd
.github/workflows/: build.yml
OSMPCameraSensor/: CMakeLists.txt  Makefile  OSMPCameraSensor.cpp  OSMPCameraSensor.fmu  OSMPCameraSensor.h  modelDescription.xml
doc/: README.md
src/: CMakeLists.txt  OSMP.cpp  OSMP.h  OSMPCameraSensor.cpp  OSMPCameraSensor.h  README.md  modelDescription.in.xml
test/integration/001_smoke_test/: SystemStructure.ssd
test/integration/002_output_osi_fields/: SystemStructure.ssd
test/unit/: CMakeLists.txt  test.cpp
